replace torch.hub yolo with source / beautify

--- a/services/yoloAPI/app/templates/dragndrop.html
+++ b/services/yoloAPI/app/templates/dragndrop.html
@@ -29,14 +29,14 @@ TODO:
 <div style="overflow-x: hidden;">
   <div class="row">
     <div class="col-auto m-2">
-      <label for="model_name" class="form-label"><b>Select YOLOv5 Model</b></label>
+      <!-- <label for="model_name" class="form-label"><b>Select YOLOv5 Model</b></label>
       <select class="form-select" id="model_name" name="model_name">
         {% for selection in model_selection_options %}
           <option value="{{ selection }}">{{ selection }}</option>
         {% endfor %}      
       </select>
       <label for="img_size" class="form-label"><b>Model Inference Size</b></label>
-      <input type="text" class="form-control" id="img_size" name="img_size" value="640">
+      <input type="text" class="form-control" id="img_size" name="img_size" value="640"> -->
     </div>
     
     <div class="col">
