--- a/services/yoloAPI/app/templates/stream.html
+++ b/services/yoloAPI/app/templates/stream.html
@@ -16,9 +16,9 @@
     {% if not res%}
       <button class="btn btn-primary" type="submit">Submit</button>
     {% endif %} -->
-    <input type="file" name="file" id="file">
-    <input type="submit" name="action" value="OPEN">
-    <input type="submit" name="action" value="STOP">
+    <input class="btn btn-outline-primary" type="file" name="file" id="file">
+    <input class="btn btn-outline-info" type="submit" name="action" value="OPEN">
+    <input class="btn btn-outline-danger" type="submit" name="action" value="STOP">
   </form>
 
   {% if res%}
