--- a/services/yoloAPI/app/templates/layout.html
+++ b/services/yoloAPI/app/templates/layout.html
@@ -15,15 +15,15 @@
 </head>
 <body>
   <!-- Navbar -->
-  <nav class="navbar navbar-expand navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">YOLOv5-FastAPI-Demo</a>
+  <nav class="navbar navbar-expand navbar-dark bg-dark" style="padding-left: 1rem">
+    <a class="navbar-brand" href="#">COSMOSTARS</a>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item"> 
-          <a class="nav-link" href="/">Home</a>
+          <a class="nav-link" href="/">Video</a>
         </li>
         <li class="nav-item"> 
-          <a class="nav-link" href="/dragndrop">Drag & Drop Detection</a>
+          <a class="nav-link" href="/dragndrop">Drag & Drop</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/docs">Docs</a>
