--- a/services/yoloAPI/app/templates/layout.html
+++ b/services/yoloAPI/app/templates/layout.html
@@ -23,7 +23,7 @@
           <a class="nav-link" href="/">Video</a>
         </li>
         <li class="nav-item"> 
-          <a class="nav-link" href="/dragndrop">Drag & Drop</a>
+          <a class="nav-link" href="/images">Images</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/docs">Docs</a>
